# rust-graphql-docker

./: docker-compose.yml  readme.md
api/: Cargo.toml  Dockerfile
api/src/: _errors.rs  cult.rs  cult_controller.rs  cult_repository.rs  graphql_schema.rs  main.rs  person.rs  person_controller.rs  person_repository.rs  schema.rs  types.rs
api/src/data/: mod.rs
api/src/data/cult/: create_cult.rs  get_cult_all.rs  get_cult_by_id.rs  mod.rs
api/src/data/person/: create_person.rs  get_person_by_id.rs  get_persons_by_cult_id.rs  mod.rs
api/src/db/: mod.rs
api/src/graphql/: handler.rs  mod.rs  model.rs  mutation.rs  query.rs  resolvers.rs  schema.rs
api/src/loaders/: mod.rs  person_loader.rs
api/src/models/: cult.rs  person.rs
api/src/repositories/: cult.rs  mod.rs  person.rs
api/src/resolvers/: cult.rs  mod.rs  person.rs
api/src/type_defs/: cults.rs  mod.rs  person.rs
database/: .create_users.sql.swp  create_cults.sql  create_users.sql
