[package]
name = "readspacer-api"
version = "0.1.0"
authors = ["Jayy-Lmao <jameswarringtonholman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15.2"
actix-web = "1.0.7"
serde = { version = "1.0.101", features = ["derive"] }

[[bin]]
name = "readspacer-api"
path = "src/main.rs"
