[package]
name = "readspacer-api"
version = "0.1.0"
authors = ["Jayy-Lmao <jameswarringtonholman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
postgres = "0.15.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "readspacer-api"
path = "src/main.rs"
